# solve_sudoku

./: .coverage  .gitignore  Untitled.ipynb  lonely_tiles.ipynb  puzzle.txt  pyproject.toml  solve_sudoku.py  try.txt
.marscode/: deviceInfo.json
examples/: easy.txt  expert.txt  expert2.txt  hard.txt  normal.txt
sudoku/: cell.py  puzzle.py  puzzle_file.py  solver.py  tile.py
tests/: README.md  test_cell.py  test_puzzle.py  test_solver.py
