[project]
name = "solve_sudoku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
